Made statistis controller with the endpoint for order ratings. Added tests
